--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.62.9",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-auth-kit": "^3.1.3",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
