--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.9",
-    "antd": "^5.22.5",
+    "antd": "^5.22.6",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
